B27 - AbstractUserService를 Resolver 등으로 변경하기 (#623)
* refactor: AbstractUserService 제거

* etc: 코드 정리